test/pass/enums_and_variants/enum_class_basic.lly
enum Option[A] {
	Some(A)
	None
}
