test/fail/enums_and_variants/variant_name_clash.lly
#[
SyntaxError: A class with the name 'Some' already exists.
    from variant_name_clash.lly:8
]#

enum Option[A] {
    Some(A)
    Some(A)
}
